--- a/about.html
+++ b/about.html
@@ -3,18 +3,12 @@ layout: about
 title: About
 header-style: text
 avatar: img/avatar.png
-my-name: Ciel
+my-name: Alice Lab
 also-called: 
 
-interests:
-  - C++ 模板元编程与内存管理
+field:
+  - 形式化,建模
 
-education:
-  - degree: Master
-    year: 2023.9 - 2026.6 (Expected)
-    school: University of Science and Technology of China
-
-  - degree: Bachelor
-    year: 2017.8 - 2021.7
-    school: Ocean University of China
+description:
+  - An AI Lab
 ---
