--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@ permalink: /404.html
 	<div class="error-info">
 		<h1 class="error-emoji"></h1>
 		<p>/* Oops! Where are we? */</p>
-		<p><a href="{{ site.baseurl }}/">$ cd /home/</a></p>
+		<p><a href="{{ site.baseurl }}/">Home</a></p>
 	</div>
  </div>
 
