--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 homepage: true
-description: 如果您发现什么地方描述有误，请在 github issue 上提出
+description: Alice Lab是一个AI研究组织
 header-img:
   - url: img/home-bg/gura.png
     mask: rgba(40, 57, 101, .4)
