--- a/links.html
+++ b/links.html
@@ -9,19 +9,9 @@ comment: false
 links:
   - type: Me
     items:
-      - sitename: Ciel's Paperplane
-        url: https://namespaceciel.github.io
+      - sitename: Alice Lab
+        url: https://alicegame1.github.io/
         img: /img/avatar.png
-        desc: 我的博客
-      - sitename: Ciel's bilibili
-        url: https://space.bilibili.com/21981853
-        img: /img/frog.png
-        desc: 我的B站
-
-  - type: Classmate
-    items:
-      - sitename: SuoLuo の Blog
-        url: http://139.196.29.66/
-        img: /img/link1.jpg
-        desc: 同学的博客
+        desc: Alice Lab
+        
 ---
