--- a/links.html
+++ b/links.html
@@ -11,7 +11,7 @@ links:
     items:
       - sitename: Alice Lab
         url: https://alicegame1.github.io/
-        img: /img/avatar.png
+        img: /img/avatar.jpg
         desc: Alice Lab
         
 ---
