--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: about
 title: About
 header-style: text
-avatar: img/avatar.png
+avatar: img/avatar.jpg
 my-name: Alice Lab
 also-called: 
 
