--- a/links.html
+++ b/links.html
@@ -10,7 +10,7 @@ links:
   - type: Me
     items:
       - sitename: Alice Lab
-        url: https://alicegame1.github.io/
+        url: https://github.com/AliceLabWorks/
         img: /img/avatar.jpg
         desc: Alice Lab
         
